istio-workshop-part2/circuitbreaker/outlier/destinationrule2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
  subsets:
    - name: version-v1
      labels:
        version: v1
      trafficPolicy:
        connectionPool:
          http:
            http1MaxPendingRequests: 5
            maxRequestsPerConnection: 5
          tcp:
            maxConnections: 5
        outlierDetection:
          baseEjectionTime: 20s
          consecutiveErrors: 1
          interval: 1s
          maxEjectionPercent: 100
          minHealthPercent: 50        
    - name: version-v2
      labels:
        version: v2
      trafficPolicy:
        connectionPool:
          http:
            http1MaxPendingRequests: 5
            maxRequestsPerConnection: 5
          tcp:
            maxConnections: 5
        outlierDetection:
          baseEjectionTime: 20s
          consecutiveErrors: 1
          interval: 1s
          maxEjectionPercent: 100
          minHealthPercent: 50
